@@ -188,15 +188,14 @@ double
 YansErrorRateModel::GetChunkSuccessRate (WifiMode mode, WifiTxVector txVector, double snr, uint32_t nbits) const
 {
   NS_LOG_FUNCTION (this << mode << txVector.GetMode () << snr << nbits);
-  uint8_t nss = txVector.GetNss ();
   if (mode.GetModulationClass () == WIFI_MOD_CLASS_ERP_OFDM
       || mode.GetModulationClass () == WIFI_MOD_CLASS_OFDM
       || mode.GetModulationClass () == WIFI_MOD_CLASS_HT
       || mode.GetModulationClass () == WIFI_MOD_CLASS_VHT)
     {
-      if (mode.GetConstellationSize (nss) == 2)
+      if (mode.GetConstellationSize () == 2)
         {
-          if (mode.GetCodeRate (nss) == WIFI_CODE_RATE_1_2)
+          if (mode.GetCodeRate () == WIFI_CODE_RATE_1_2)
             {
               return GetFecBpskBer (snr,
                                     nbits,
@@ -215,9 +214,9 @@ YansErrorRateModel::GetChunkSuccessRate (WifiMode mode, WifiTxVector txVector, d
                                     8); //adFree
             }
         }
-      else if (mode.GetConstellationSize (nss) == 4)
+      else if (mode.GetConstellationSize () == 4)
         {
-          if (mode.GetCodeRate (nss) == WIFI_CODE_RATE_1_2)
+          if (mode.GetCodeRate () == WIFI_CODE_RATE_1_2)
             {
               return GetFecQamBer (snr,
                                    nbits,
@@ -240,9 +239,9 @@ YansErrorRateModel::GetChunkSuccessRate (WifiMode mode, WifiTxVector txVector, d
                                    31); //adFreePlusOne
             }
         }
-      else if (mode.GetConstellationSize (nss) == 16)
+      else if (mode.GetConstellationSize () == 16)
         {
-          if (mode.GetCodeRate (nss) == WIFI_CODE_RATE_1_2)
+          if (mode.GetCodeRate () == WIFI_CODE_RATE_1_2)
             {
               return GetFecQamBer (snr,
                                    nbits,
@@ -265,9 +264,9 @@ YansErrorRateModel::GetChunkSuccessRate (WifiMode mode, WifiTxVector txVector, d
                                    31); //adFreePlusOne
             }
         }
-      else if (mode.GetConstellationSize (nss) == 64)
+      else if (mode.GetConstellationSize () == 64)
         {
-          if (mode.GetCodeRate (nss) == WIFI_CODE_RATE_2_3)
+          if (mode.GetCodeRate () == WIFI_CODE_RATE_2_3)
             {
               return GetFecQamBer (snr,
                                    nbits,
@@ -278,7 +277,7 @@ YansErrorRateModel::GetChunkSuccessRate (WifiMode mode, WifiTxVector txVector, d
                                    1, //adFree
                                    16); //adFreePlusOne
             }
-          if (mode.GetCodeRate (nss) == WIFI_CODE_RATE_5_6)
+          if (mode.GetCodeRate () == WIFI_CODE_RATE_5_6)
             {
               //Table B.32  in Pâl Frenger et al., "Multi-rate Convolutional Codes".
               return GetFecQamBer (snr,
@@ -302,9 +301,9 @@ YansErrorRateModel::GetChunkSuccessRate (WifiMode mode, WifiTxVector txVector, d
                                    31); //adFreePlusOne
             }
         }
-      else if (mode.GetConstellationSize (nss) == 256)
+      else if (mode.GetConstellationSize () == 256)
         {
-          if (mode.GetCodeRate (nss) == WIFI_CODE_RATE_5_6)
+          if (mode.GetCodeRate () == WIFI_CODE_RATE_5_6)
             {
               return GetFecQamBer (snr,
                                    nbits,
